Did most of the interface

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -16,6 +16,7 @@
         "react"
     ],
     "rules": {
+        "no-console": 0,
         "no-unused-vars": 0,
         "indent": [
             "error",
