--- a/package.json
+++ b/package.json
@@ -5,8 +5,11 @@
   "dependencies": {
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-image-gallery": "^0.8.7",
+    "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
-    "react-scripts": "1.1.0"
+    "react-scripts": "1.1.0",
+    "react-slick": "^0.16.0"
   },
   "scripts": {
     "start": "react-scripts start",
