--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
     "axios": "^0.17.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-redux": "^5.0.6",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.0",
-    "react-slick": "^0.16.0"
+    "react-slick": "^0.16.0",
+    "webpack": "^3.10.0"
   },
   "scripts": {
     "start": "react-scripts start",
